changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/cfpython_object.c,
  plugins/cfpython/include/cfpython_object_private.h: Add Object_GetAnimated()
  to be able to read this property (it used to be write only from python).
Arvid Norlander 2009-02-10

plugins/cfpython/cfpython_object.c,
  plugins/cfpython/include/cfpython_object_private.h: Make it possible to set
  Object.Identified as well as get it. This was used by some python scripts
  (though it didn't actually work).
Arvid Norlander 2009-02-09

utils/mapper.c: Fix a segfault when generating world map and not all input maps
  was found (could happen using -limit).
Arvid Norlander 2009-02-08

utils/mapper.c: Change // style comment to /**/ style. Add missing include. Make
  some variables and functions static (fixing GCC warnings about missing
  prototypes). Change some 0 to NULL for pointers to make code clearer.
Arvid Norlander 2009-02-08

utils/mapper.c: Change all sprintf() to snprintf(). Also fix a crash due to
  division by zero when using -limit and we didn't get as far as processing any
  maps with non-zero elevation.
Arvid Norlander 2009-02-08

utils/mapper.c: Remove some unused variables. Get rid of zero length snprintf()
  (caused GCC warning).
Arvid Norlander 2009-02-08

include/libproto.h, common/dialog.c, common/init.c, common/object.c,
  common/button.c, common/region.c, common/living.c, common/time.c,
  common/recipe.c, common/map.c, common/arch.c, common/treasure.c: Make a lot
  of functions that aren't used outside one file in common/ static.
Arvid Norlander 2009-02-07
